Fix: Footer- Arreglado el Gap del Grid

--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,8 @@ p {
   grid-template-columns: 1fr 3fr 3fr 3fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   color: #fff;
-  grid-template-rows: auto 2fr 2fr 2fr auto; }
+  grid-template-rows: auto 2fr 2fr 2fr auto;
+  gap: 2vh; }
   @media only screen and (min-width: 768px) {
     .footer {
       text-align: center; } }
